--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
             <!--main-->
             <section class="headline">
-                <h1 class="greeting">Hey there.</h1>
-                <h1 class="my-name">I’m Steve</h1>
+                <div class="heading">
+                    <h1 class="intro1">Hey there.</h1>
+                    <h1 class="intro2">I’m Steve</h1>
+                </div>
                 <h1 class="career">I’m a Software<br>Developer</h1>
-                <p>I can help you build a product ,<br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                <p>I can help you build a product,<br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                     don’t hesitate to contact me.</p>
             </section>
 
@@ -64,11 +66,13 @@
     <!--work section-->
     <section id="my-work" class="my-work">
         <div class="grid container">
-            <div id="heading">
-                <h3>My Recent<br>Works</h3>
+            <div id="heading" class="heading">
+                <h3 class="intro1">My Recent</h3>
+                <h3 class="intro2">Works</h3>
                 <div class="second"></div>
             </div>
-            <div class="work-item">
+            <section class="works">
+                <div class="work-item">
                     <img src="images/work1.png" alt="">
                     <div class="work-item-content">
                         <h2>Multi-Post Stories<br>Gain+Glory</h2>
@@ -82,9 +86,9 @@
                             <button class="btn2">See Project</button>
                         </a>
                     </div>
-            </div>
-            <div class="work-item">
-                    <img src="images/work2.png" alt="">
+                </div>
+                <div class="work-item">
+                    <img src="images/work1.png" alt="">
                     <div class="work-item-content">
                         <h2>Multi-Post Stories<br>Gain+Glory</h2>
                         <ul>
@@ -97,9 +101,9 @@
                             <button class="btn2">See Project</button>
                         </a>
                     </div>
-            </div>
-            <div class="work-item">
-                    <img src="images/work3.png" alt="">
+                </div>
+                <div class="work-item">
+                    <img src="images/work1.png" alt="">
                     <div class="work-item-content">
                         <h2>Multi-Post Stories<br>Gain+Glory</h2>
                         <ul>
@@ -112,9 +116,9 @@
                             <button class="btn2">See Project</button>
                         </a>
                     </div>
-            </div>
-            <div class="work-item">
-                    <img src="images/work4.png" alt="">
+                </div>
+                <div class="work-item">
+                    <img src="images/work1.png" alt="">
                     <div class="work-item-content">
                         <h2>Multi-Post Stories<br>Gain+Glory</h2>
                         <ul>
@@ -127,7 +131,38 @@
                             <button class="btn2">See Project</button>
                         </a>
                     </div>
-            </div>
+                </div>
+                <div class="work-item">
+                    <img src="images/work1.png" alt="">
+                    <div class="work-item-content">
+                        <h2>Multi-Post Stories<br>Gain+Glory</h2>
+                        <ul>
+                            <li class="langs"><button> Ruby on Rails</button></li>
+                            <li class="langs"><button>  CSS</button></li>
+                            <li class="langs"><button> JavaScript</button></li>
+                            <li class="langs"><button> HTML</button></li>
+                        </ul>
+                        <a href="#">
+                            <button class="btn2">See Project</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="images/work1.png" alt="">
+                    <div class="work-item-content">
+                        <h2>Multi-Post Stories<br>Gain+Glory</h2>
+                        <ul>
+                            <li class="langs"><button> Ruby on Rails</button></li>
+                            <li class="langs"><button>  CSS</button></li>
+                            <li class="langs"><button> JavaScript</button></li>
+                            <li class="langs"><button> HTML</button></li>
+                        </ul>
+                        <a href="#">
+                            <button class="btn2">See Project</button>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </div>
     </section>
 </div>
@@ -138,7 +173,7 @@
         <div class="about-me">
             <div class="about-me-content">
                 <h3>About me</h3>
-                <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+                <p>Hello I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
             </div>
             <a href="#">
                 <button class="btn2">Get my resume</button>
@@ -150,7 +185,7 @@
         <!-- languages -->
         <div class="summary-card">
             <div class="image">
-              <img src="icon-languages.svg">
+                <img src="icon-languages.svg">
             </div>
             <h2>Languages</h2>
             <ul>
