add review corrections

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+<div class="container-body">
     <!--nav-->
     <header class="app-header">
         <label for="toggler"><i class="fa-solid fa-bars"></i></label>
@@ -29,7 +30,6 @@
             </div>
         </nav>
     </header>
-<div class="container-body">
     <section class="app-wrap">
         <div class="container">
 
@@ -61,14 +61,13 @@
         
         </div>
     </section>
-
+</div>
 
     <!--work section-->
     <section id="my-work" class="my-work">
         <div class="grid container">
             <div id="heading" class="heading">
-                <h3 class="intro1">My Recent</h3>
-                <h3 class="intro2">Works</h3>
+                <h3 class="intro1">My Recent Works</h3>
                 <div class="second"></div>
             </div>
             <section class="works">
@@ -165,7 +164,7 @@
             </section>
         </div>
     </section>
-</div>
+
 <section class="profile">
 
     <!-- about section -->
