--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                     <h1 class="intro2">I’m Steve</h1>
                 </div>
                 <h1 class="career">I’m a Software<br>Developer</h1>
-                <p>I can help you build a product,<br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                    don’t hesitate to contact me.</p>
+                <p>I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                    don’t hesitate to contact me.
+                </p>
             </section>
 
             <!--icons-->
